--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem autem consectetur voluptas aspernatur quaerat? Temporibus, optio voluptatum praesentium deleniti aliquam porro quas explicabo officia nihil, odio repellendus tenetur neque esse.</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title> WIki Max Vestappen</title>
+    </head>
+    <body>
+        <header>
+            <div class="MVName">
+                <h1 id="NameMax">Max</h1>
+                <h1 id="NameVes">Vestappen</h1>
+                <h1>33</h1>
+            </div>
+        </header>
+        <main>
+            <div class="Div01">
+
+            <div class="Divsub01">
+                <img id="imgMax" src="./imgs/max-vestappen1.webp" alt="Max Vestappen">
+                <img id="imgMax" src="./imgs/max-vestappen2.webp" alt="Max Vestappen">
+                <img id="imgMax" src="./imgs/max-vestappen3.webp" alt="Max Vestappen">
+            </div>
+            <p class="texto">Max Vestappen é um piloto holandês de Fórmula 1, conhecido por sua habilidade técnica e agressividade no volante. Ele é o atual campeão mundial da Fórmula 1 e tem conquistado diversos títulos importantes em sua carreira.</p>
+            </div>
+
+            <div class="Div02">
+            <button class="botao">BOTÃO1</button>
+            <button class="botao">BOTÃO2</button>
+            <button class="botao">BOTÃO3</button>
+            <button class="botao">BOTÃO4</button>
+            <button class="botao">BOTÃO5</button>
+            </div>
+        </main>
+    </body>
 </html>
